Overview of changes from Beebop 1.0.0 to 1.2.0
==============================================

  [New features]
    * Open files from the command line or file browser.
    * Save PDF files to a separate directory.
    * Fill closing row with asterisks.
    * Make the header font configurable.

  [Bug fixes]
    * Correctly detect when sending to recipient.
    * Correctly update destination when recipient changes.
    * Correctly update controls as rows are added or removed.
    * Check header markup for validity.


Overview of changes in Beebop 1.0.0
===================================

  * First release.